--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
+  "type": "module",
   "name": "leafbuddy",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon server/server.js",
+    "start:client": "NODE_ENV=development webpack serve --open"
   },
   "repository": {
     "type": "git",
@@ -15,5 +18,21 @@
   "bugs": {
     "url": "https://github.com/LeafBuddy/leafBuddy/issues"
   },
-  "homepage": "https://github.com/LeafBuddy/leafBuddy#readme"
+  "homepage": "https://github.com/LeafBuddy/leafBuddy#readme",
+  "dependencies": {
+    "express": "^4.17.1",
+    "html-webpack-plugin": "^5.3.2",
+    "nodemon": "^2.0.12",
+    "path": "^0.12.7",
+    "url": "^0.11.0",
+    "webpack": "^5.52.1"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.15.5",
+    "@babel/preset-react": "^7.14.5",
+    "babel": "^6.23.0",
+    "babel-loader": "^8.2.2",
+    "webpack-cli": "^4.8.0",
+    "webpack-dev-server": "^4.2.0"
+  }
 }
