--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "html-webpack-plugin": "^5.3.2",
     "nodemon": "^2.0.12",
     "path": "^0.12.7",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^5.3.0",
     "url": "^0.11.0",
     "webpack": "^5.52.1"
   },
