--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
   },
   "homepage": "https://github.com/LeafBuddy/leafBuddy#readme",
   "dependencies": {
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "html-webpack-plugin": "^5.3.2",
     "nodemon": "^2.0.12",
     "path": "^0.12.7",
+    "pg": "^8.7.1",
     "url": "^0.11.0",
     "webpack": "^5.52.1"
   },
