--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "nodemon": "^2.0.12",
     "path": "^0.12.7",
     "pg": "^8.7.1",
+    "plaid": "^8.5.3",
     "url": "^0.11.0",
     "webpack": "^5.52.1"
   },
