--- a/package.json
+++ b/package.json
@@ -27,11 +27,13 @@
     "nodemon": "^2.0.12",
     "path": "^0.12.7",
     "pg": "^8.7.1",
+    "react-plaid-link": "^3.2.1",
     "url": "^0.11.0",
     "webpack": "^5.52.1"
   },
   "devDependencies": {
     "@babel/core": "^7.15.5",
+    "@babel/plugin-transform-modules-commonjs": "^7.15.4",
     "@babel/preset-react": "^7.14.5",
     "babel": "^6.23.0",
     "babel-loader": "^8.2.2",
