--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-  "type": "module",
   "name": "leafbuddy",
   "version": "1.0.0",
   "description": "",
@@ -18,6 +17,7 @@
   "bugs": {
     "url": "https://github.com/LeafBuddy/leafBuddy/issues"
   },
+  "proxy": "http://localhost:4000",
   "homepage": "https://github.com/LeafBuddy/leafBuddy#readme",
   "dependencies": {
     "dotenv": "^10.0.0",
@@ -32,10 +32,11 @@
   },
   "devDependencies": {
     "@babel/core": "^7.15.5",
-    "eslint": "^7.32.0",
+    "@babel/preset-env": "^7.15.6",
     "@babel/preset-react": "^7.14.5",
     "babel": "^6.23.0",
     "babel-loader": "^8.2.2",
+    "eslint": "^7.32.0",
     "webpack-cli": "^4.8.0",
     "webpack-dev-server": "^4.2.0"
   }
