--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "faker": "^5.5.3",
     "dotenv": "^10.0.0",
     "eslint": "^7.32.0",
-    "express": "^4.17.1",
     "html-webpack-plugin": "^5.3.2",
     "nodemon": "^2.0.12",
     "path": "^0.12.7",
@@ -38,8 +37,7 @@
     "react-router-dom": "^5.3.0",
     "recharts": "^2.1.2",
     "sass-loader": "^12.1.0",
-    "style-loader": "^3.2.1",
-    "url": "^0.11.0"
+    "style-loader": "^3.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.15.5",
