--- a/package.json
+++ b/package.json
@@ -21,29 +21,33 @@
   "homepage": "https://github.com/LeafBuddy/leafBuddy#readme",
   "dependencies": {
     "css-loader": "^6.2.0",
-    "express": "^4.17.1",
-    "faker": "^5.5.3",
     "dotenv": "^10.0.0",
     "eslint": "^7.32.0",
+    "express": "^4.17.1",
+    "faker": "^5.5.3",
     "html-webpack-plugin": "^5.3.2",
     "nodemon": "^2.0.12",
     "path": "^0.12.7",
     "pg": "^8.7.1",
     "plaid": "^8.5.3",
-    "url": "^0.11.0",
-    "webpack": "^5.52.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
     "recharts": "^2.1.2",
+    "redux": "^4.1.1",
+    "redux-devtools-extension": "^2.13.9",
     "sass-loader": "^12.1.0",
-    "style-loader": "^3.2.1"
+    "style-loader": "^3.2.1",
+    "url": "^0.11.0",
+    "webpack": "^5.52.1"
   },
   "devDependencies": {
     "@babel/core": "^7.15.5",
     "@babel/preset-react": "^7.14.5",
     "babel": "^6.23.0",
     "babel-loader": "^8.2.2",
+    "eslint-plugin-react": "^7.25.1",
     "sass": "^1.39.2",
     "webpack": "^5.52.1",
     "webpack-cli": "^4.8.0",
