--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,6 +20,15 @@
         "space-infix-ops": "warn",
         "max-len": ["error", { "code": 120, "ignoreStrings": true }]
     },
+    "parser": "babel-eslint",
+    "parserOptions": {
+        "ecmaVersion": 9,
+        "ecmaFeatures": {
+        "jsx": true
+        },
+        "sourceType": "module"
+    },
+    "plugins": ["react"],
     "env": {
         "es2021": true,
         "node": true,
