--- a/package.json
+++ b/package.json
@@ -22,29 +22,30 @@
   "dependencies": {
     "axios": "^0.21.4",
     "css-loader": "^6.2.0",
-    "express": "^4.17.1",
-    "faker": "^5.5.3",
     "dotenv": "^10.0.0",
     "eslint": "^7.32.0",
+    "express": "^4.17.1",
+    "faker": "^5.5.3",
     "html-webpack-plugin": "^5.3.2",
     "nodemon": "^2.0.12",
     "path": "^0.12.7",
     "pg": "^8.7.1",
-    "react-plaid-link": "^3.2.1",
-    "url": "^0.11.0",
-    "webpack": "^5.52.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-plaid-link": "^3.2.1",
     "react-router-dom": "^5.3.0",
     "recharts": "^2.1.2",
     "sass-loader": "^12.1.0",
-    "style-loader": "^3.2.1"
+    "style-loader": "^3.2.1",
+    "url": "^0.11.0",
+    "webpack": "^5.52.1"
   },
   "devDependencies": {
     "@babel/core": "^7.15.5",
     "@babel/plugin-transform-modules-commonjs": "^7.15.4",
     "@babel/preset-react": "^7.14.5",
     "babel": "^6.23.0",
+    "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
     "plaid": "^9.0.0-beta.15",
     "sass": "^1.39.2",
