--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-  "type": "module",
   "name": "leafbuddy",
   "version": "1.0.0",
   "description": "",
@@ -7,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server/server.js",
-    "start:client": "NODE_ENV=development webpack serve --open"
+    "start:client": "NODE_ENV=development webpack serve --open & nodemon server/server.js"
   },
   "repository": {
     "type": "git",
@@ -20,24 +19,28 @@
   },
   "homepage": "https://github.com/LeafBuddy/leafBuddy#readme",
   "dependencies": {
+    "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
     "css-loader": "^6.2.0",
-    "express": "^4.17.1",
-    "faker": "^5.5.3",
     "dotenv": "^10.0.0",
     "eslint": "^7.32.0",
+    "express": "^4.17.1",
+    "faker": "^5.5.3",
     "html-webpack-plugin": "^5.3.2",
     "nodemon": "^2.0.12",
+    "passport": "^0.4.1",
+    "passport-google-oauth20": "^2.0.0",
     "path": "^0.12.7",
     "pg": "^8.7.1",
     "plaid": "^8.5.3",
-    "url": "^0.11.0",
-    "webpack": "^5.52.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
     "recharts": "^2.1.2",
     "sass-loader": "^12.1.0",
-    "style-loader": "^3.2.1"
+    "style-loader": "^3.2.1",
+    "url": "^0.11.0",
+    "webpack": "^5.52.1"
   },
   "devDependencies": {
     "@babel/core": "^7.15.5",
