--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "type": "git",
     "url": "git+https://github.com/LeafBuddy/leafBuddy.git"
   },
-  "type": "module",
   "author": "",
   "license": "ISC",
   "bugs": {
@@ -21,10 +20,10 @@
   "homepage": "https://github.com/LeafBuddy/leafBuddy#readme",
   "dependencies": {
     "axios": "^0.21.4",
-    "css-loader": "^6.2.0",
-    "dotenv": "^10.0.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
+    "css-loader": "^6.2.0",
+    "dotenv": "^10.0.0",
     "eslint": "^7.32.0",
     "express": "^4.17.1",
     "faker": "^5.5.3",
@@ -38,7 +37,6 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-plaid-link": "^3.2.1",
-    "plaid": "^8.5.3",
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
     "recharts": "^2.1.2",
@@ -53,11 +51,13 @@
     "@babel/cli": "^7.15.4",
     "@babel/core": "^7.15.5",
     "@babel/plugin-transform-modules-commonjs": "^7.15.4",
+    "@babel/preset-env": "^7.15.6",
     "@babel/preset-react": "^7.14.5",
     "babel": "^6.23.0",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
     "eslint-plugin-react": "^7.25.1",
+    "plaid": "^9.0.0-beta.15",
     "sass": "^1.39.2",
     "webpack": "^5.52.1",
     "webpack-cli": "^4.8.0",
