--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "eslint": "^7.32.0",
     "express": "^4.17.1",
     "faker": "^5.5.3",
+    "file-loader": "^6.2.0",
+    "framer-motion": "^4.1.17",
     "html-webpack-plugin": "^5.3.2",
     "nodemon": "^2.0.12",
     "passport": "^0.4.1",
@@ -37,6 +39,7 @@
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
+    "react-spring": "^9.2.4",
     "recharts": "^2.1.2",
     "redux": "^4.1.1",
     "redux-devtools-extension": "^2.13.9",
@@ -51,7 +54,9 @@
     "babel": "^6.23.0",
     "babel-loader": "^8.2.2",
     "eslint-plugin-react": "^7.25.1",
+    "resolve-url-loader": "^4.0.0",
     "sass": "^1.39.2",
+    "url-loader": "^4.1.1",
     "webpack": "^5.52.1",
     "webpack-cli": "^4.8.0",
     "webpack-dev-server": "^4.2.0"
