--- a/package.json
+++ b/package.json
@@ -30,8 +30,10 @@
     "file-loader": "^6.2.0",
     "framer-motion": "^4.1.17",
     "html-webpack-plugin": "^5.3.2",
+    "mastercard-oauth1-signer": "^1.1.5",
     "module": "^1.2.5",
     "moment": "^2.29.1",
+    "node-forge": "^0.10.0",
     "nodemon": "^2.0.12",
     "passport": "^0.4.1",
     "passport-google-oauth20": "^2.0.0",
@@ -61,8 +63,8 @@
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
     "eslint-plugin-react": "^7.25.1",
-    "resolve-url-loader": "^4.0.0",
     "plaid": "^9.0.0-beta.15",
+    "resolve-url-loader": "^4.0.0",
     "sass": "^1.39.2",
     "url-loader": "^4.1.1",
     "webpack": "^5.52.1",
