--- a/package.json
+++ b/package.json
@@ -30,9 +30,11 @@
     "file-loader": "^6.2.0",
     "framer-motion": "^4.1.17",
     "html-webpack-plugin": "^5.3.2",
+    "mastercard-merchant-identifier": "^2.0.0",
     "mastercard-oauth1-signer": "^1.1.5",
     "module": "^1.2.5",
     "moment": "^2.29.1",
+    "node-fetch": "^3.0.0",
     "node-forge": "^0.10.0",
     "nodemon": "^2.0.12",
     "passport": "^0.4.1",
