--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "nodemon server/server.js",
     "start:client": "NODE_ENV=development webpack serve --open & nodemon server/server.js"
   },
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/LeafBuddy/leafBuddy#readme",
   "dependencies": {
+    "@babel/polyfill": "^7.12.1",
     "axios": "^0.21.4",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
@@ -57,13 +58,18 @@
     "@babel/plugin-transform-modules-commonjs": "^7.15.4",
     "@babel/preset-env": "^7.15.6",
     "@babel/preset-react": "^7.14.5",
+    "@testing-library/react": "^12.1.0",
     "babel": "^6.23.0",
     "babel-eslint": "^10.1.0",
+    "babel-jest": "^27.2.0",
     "babel-loader": "^8.2.2",
     "eslint-plugin-react": "^7.25.1",
-    "resolve-url-loader": "^4.0.0",
+    "jest": "^27.2.0",
     "plaid": "^9.0.0-beta.15",
+    "react-test-renderer": "^17.0.2",
+    "resolve-url-loader": "^4.0.0",
     "sass": "^1.39.2",
+    "supertest": "^6.1.6",
     "url-loader": "^4.1.1",
     "webpack": "^5.52.1",
     "webpack-cli": "^4.8.0",
