--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,6 +21,7 @@
     "max-len": ["error", { "code": 120, "ignoreStrings": true }]
   },
   "env": {
+    "jest": true,
     "es2021": true,
     "node": true,
     "serviceworker": true,
