--- a/package.json
+++ b/package.json
@@ -38,7 +38,9 @@
     "path": "^0.12.7",
     "pg": "^8.7.1",
     "react": "^17.0.2",
+    "react-bootstrap": "^1.6.3",
     "react-dom": "^17.0.2",
+    "react-loadingg": "^1.7.2",
     "react-plaid-link": "^3.2.1",
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
