--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "faker": "^5.5.3",
     "file-loader": "^6.2.0",
     "framer-motion": "^4.1.17",
+    "fuse.js": "^6.4.6",
     "html-webpack-plugin": "^5.3.2",
     "mastercard-merchant-identifier": "^2.0.0",
     "mastercard-oauth1-signer": "^1.1.5",
