--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "crypto-random-string": "^4.0.0",
+    "cryptorandomstring": "^1.0.0",
     "css-loader": "^6.2.0",
     "dotenv": "^10.0.0",
     "eslint": "^7.32.0",
@@ -38,6 +39,7 @@
     "passport": "^0.4.1",
     "passport-google-oauth20": "^2.0.0",
     "pg": "^8.7.1",
+    "randomstring": "^1.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-plaid-link": "^3.2.1",
@@ -45,6 +47,7 @@
     "recharts": "^2.1.2",
     "sass-loader": "^12.1.0",
     "style-loader": "^3.2.1",
+    "unique-string": "^3.0.0",
     "webpack": "^5.52.1"
   },
   "devDependencies": {
