--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "react-router-dom": "^5.3.0",
     "recharts": "^2.1.2",
     "sass-loader": "^12.1.0",
-    "style-loader": "^3.2.1",
+    "style-loader": "^3.2.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.15.4",
