--- a/package.json
+++ b/package.json
@@ -22,15 +22,12 @@
   },
   "homepage": "https://github.com/LeafBuddy/leafBuddy#readme",
   "dependencies": {
-    "@babel/polyfill": "^7.12.1",
     "axios": "^0.21.4",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "css-loader": "^6.2.0",
-    "dotenv": "^10.0.0",
     "eslint": "^7.32.0",
     "express": "^4.17.1",
-    "faker": "^5.5.3",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.2",
     "moment": "^2.29.1",
@@ -38,16 +35,9 @@
     "passport": "^0.4.1",
     "passport-google-oauth20": "^2.0.0",
     "pg": "^8.7.1",
-    "react": "^17.0.2",
-    "react-bootstrap": "^1.6.3",
-    "react-dom": "^17.0.2",
-    "react-loadingg": "^1.7.2",
-    "react-plaid-link": "^3.2.1",
-    "react-router-dom": "^5.3.0",
     "recharts": "^2.1.2",
     "sass-loader": "^12.1.0",
-    "style-loader": "^3.2.1",
-    "webpack": "^5.52.1"
+    "style-loader": "^3.2.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.15.4",
@@ -55,16 +45,12 @@
     "@babel/plugin-transform-modules-commonjs": "^7.15.4",
     "@babel/preset-env": "^7.15.6",
     "@babel/preset-react": "^7.14.5",
-    "@testing-library/react": "^12.1.0",
     "babel": "^6.23.0",
     "babel-eslint": "^10.1.0",
-    "babel-jest": "^27.2.0",
     "babel-loader": "^8.2.2",
     "eslint-plugin-react": "^7.25.1",
     "plaid": "^9.0.0-beta.15",
-    "react-test-renderer": "^17.0.2",
     "sass": "^1.39.2",
-    "supertest": "^6.1.6",
     "url-loader": "^4.1.1",
     "webpack": "^5.52.1",
     "webpack-cli": "^4.8.0",
