--- a/package.json
+++ b/package.json
@@ -60,7 +60,6 @@
     "url-loader": "^4.1.1",
     "webpack": "^5.52.1",
     "webpack-cli": "^4.8.0",
-    "webpack-dev-server": "^4.2.0",
-    "dotenv-webpack": "^7.0.3"
+    "webpack-dev-server": "^4.2.0"
   }
 }
